--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- </div> -->
     <ul>
         <li><a href="chars_book/index.html">全人物解析</a></li>
-        <li><a href="tftf-radar-chart.html">全人物能力图谱</a></li>
+        <!-- <li><a href="tftf-radar-chart.html">全人物能力图谱</a></li> -->
         <li><a href="5star.html">五星人物动态</a></li>
         <li><a href="mastery_book/index.html">精通解析</a></li>
         <li><a href="forge_book/index.html">锻造解析</a></li>
