--- a/5star.html
+++ b/5star.html
@@ -15,7 +15,7 @@
 
 <title>百炼为战五星人物动态</title>
 
-<script src="5star_files/header-attrs-2.13/header-attrs.js"></script>
+<script src="5star_files/header-attrs-2.11/header-attrs.js"></script>
 
 
 
@@ -38,7 +38,7 @@
 <div class="inner">
 <h1 class="title toc-ignore">百炼为战五星人物动态</h1>
 <h3 class="author">公理天城翻译官</h3>
-<h3 class="date">更新时间：2022-05-20</h3>
+<h3 class="date">更新时间：2022-05-29</h3>
 </div>
 </header>
 
@@ -46,45 +46,26 @@
 <div id="TOC" class="toc">
 <div class="inner">
 <ul>
-<li><a href="#五星普通池"><span class="toc-section-number">1</span>
-五星普通池</a>
+<li><a href="#五星普通池"><span class="toc-section-number">1</span> 五星普通池</a>
 <ul>
-<li><a href="#第一波2018年4月6.0版"><span
-class="toc-section-number">1.1</span>
-第一波（2018年4月，6.0版）</a></li>
-<li><a href="#第二波2018年8月7.0版"><span
-class="toc-section-number">1.2</span>
-第二波（2018年8月，7.0版）</a></li>
-<li><a href="#第三波2019年6月20日"><span
-class="toc-section-number">1.3</span> 第三波（2019年6月20日）</a></li>
-<li><a href="#第四波"><span class="toc-section-number">1.4</span>
-第“四”波</a></li>
-<li><a href="#普通池后续人物"><span
-class="toc-section-number">1.5</span> 普通池后续人物</a></li>
+<li><a href="#第一波2018年4月6.0版"><span class="toc-section-number">1.1</span> 第一波（2018年4月，6.0版）</a></li>
+<li><a href="#第二波2018年8月7.0版"><span class="toc-section-number">1.2</span> 第二波（2018年8月，7.0版）</a></li>
+<li><a href="#第三波2019年6月20日"><span class="toc-section-number">1.3</span> 第三波（2019年6月20日）</a></li>
+<li><a href="#第四波"><span class="toc-section-number">1.4</span> 第“四”波</a></li>
+<li><a href="#普通池后续人物"><span class="toc-section-number">1.5</span> 普通池后续人物</a></li>
 </ul></li>
-<li><a href="#通用币人物"><span class="toc-section-number">2</span>
-通用币人物</a>
+<li><a href="#通用币人物"><span class="toc-section-number">2</span> 通用币人物</a>
 <ul>
-<li><a href="#年"><span class="toc-section-number">2.1</span>
-2019年</a></li>
-<li><a href="#年-1"><span class="toc-section-number">2.2</span>
-2020年</a></li>
-<li><a href="#年-2"><span class="toc-section-number">2.3</span>
-2021年</a></li>
-<li><a href="#年-3"><span class="toc-section-number">2.4</span>
-2022年</a></li>
+<li><a href="#年"><span class="toc-section-number">2.1</span> 2019年</a></li>
+<li><a href="#年-1"><span class="toc-section-number">2.2</span> 2020年</a></li>
+<li><a href="#年-2"><span class="toc-section-number">2.3</span> 2021年</a></li>
+<li><a href="#年-3"><span class="toc-section-number">2.4</span> 2022年</a></li>
 </ul></li>
-<li><a href="#世代币人物"><span class="toc-section-number">3</span>
-世代币人物</a></li>
-<li><a href="#野兽币人物"><span class="toc-section-number">4</span>
-野兽币人物</a></li>
-<li><a href="#冷饭活动"><span class="toc-section-number">5</span>
-冷饭活动</a></li>
-<li><a href="#泰坦碎片巨人碎片商店人物"><span
-class="toc-section-number">6</span>
-泰坦碎片（巨人碎片）商店人物</a></li>
-<li><a href="#独家人物"><span class="toc-section-number">7</span>
-独家人物</a></li>
+<li><a href="#世代币人物"><span class="toc-section-number">3</span> 世代币人物</a></li>
+<li><a href="#野兽币人物"><span class="toc-section-number">4</span> 野兽币人物</a></li>
+<li><a href="#冷饭活动"><span class="toc-section-number">5</span> 冷饭活动</a></li>
+<li><a href="#泰坦碎片巨人碎片商店人物"><span class="toc-section-number">6</span> 泰坦碎片（巨人碎片）商店人物</a></li>
+<li><a href="#独家人物"><span class="toc-section-number">7</span> 独家人物</a></li>
 </ul>
 </div>
 </div>
@@ -99,8 +80,7 @@ class="toc-section-number">6</span>
 <h1><span class="header-section-number">1</span> 五星普通池</h1>
 <p>一般指五星碎片水晶能开到的机器人。3~5星水晶和5星专属水晶中除了该水晶专属人物，其他5星也在5星普通池中选人。</p>
 <div id="第一波2018年4月6.0版" class="section level2" number="1.1">
-<h2><span class="header-section-number">1.1</span>
-第一波（2018年4月，6.0版）</h2>
+<h2><span class="header-section-number">1.1</span> 第一波（2018年4月，6.0版）</h2>
 <ul>
 <li>碾碎器，猩猩队长</li>
 <li>阿尔茜，漂移</li>
@@ -111,8 +91,7 @@ class="toc-section-number">6</span>
 </ul>
 </div>
 <div id="第二波2018年8月7.0版" class="section level2" number="1.2">
-<h2><span class="header-section-number">1.2</span>
-第二波（2018年8月，7.0版）</h2>
+<h2><span class="header-section-number">1.2</span> 第二波（2018年8月，7.0版）</h2>
 <ul>
 <li>钢锁，斗擎</li>
 <li>热破，碎骨魔</li>
@@ -123,8 +102,7 @@ class="toc-section-number">6</span>
 </ul>
 </div>
 <div id="第三波2019年6月20日" class="section level2" number="1.3">
-<h2><span class="header-section-number">1.3</span>
-第三波（2019年6月20日）</h2>
+<h2><span class="header-section-number">1.3</span> 第三波（2019年6月20日）</h2>
 <ul>
 <li>汽车大师</li>
 <li>雷震</li>
@@ -224,8 +202,7 @@ class="toc-section-number">6</span>
 <p>2月4日的时候，游戏公司又宣布了新的人物：闹翻天、G1铁皮确定，另新的启动画面上出现了一名疑似是补天士的角色。</p>
 <p>闹翻天在2月25日登场。</p>
 <p>G1铁皮在3月31日登场。</p>
-<p>4月12日YouTube的Hasbro
-Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙。</p>
+<p>4月12日YouTube的Hasbro Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙。</p>
 <p>5月4日9.1.0更新新封面，不但补天士登场，滑流（Slipstream，一译璇流）也出现了！</p>
 <p>滑流在5月19日登场。</p>
 </div>
@@ -249,8 +226,7 @@ Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，
 <p>2022年开始为填补新人物发布间空档期（两周），卡邦会把一些之前的活动重新拿出来。例如霸天虎活动，电影人物活动。套路都是肝主题币，换3/4/5星人物。</p>
 </div>
 <div id="泰坦碎片巨人碎片商店人物" class="section level1" number="6">
-<h1><span class="header-section-number">6</span>
-泰坦碎片（巨人碎片）商店人物</h1>
+<h1><span class="header-section-number">6</span> 泰坦碎片（巨人碎片）商店人物</h1>
 <p>以下人物在泰坦碎片商店可以购得，长期有效。</p>
 <table>
 <thead>
@@ -307,8 +283,22 @@ Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，
 <li>饿鲨S-1000：5星饿鲨水晶小概率开出</li>
 <li>挽歌：在发布时直接明码标价购买：￥648一个五星，没有盲盒套路</li>
 <li>闹翻天：直接氪金648或者通过限时礼包（3500能量块）购买，比较亲民，后续可通过精英传送水晶（3~5星）开出来，可以直接能量块购买，有一周的传送事件竞技场可以获得碎片</li>
-<li>G1铁皮：同闹翻天的营销策略完全相同。648￥直接买-开水晶-能量块礼包-专题竞技场开水晶，分阶段满足各类玩家的需求。</li>
+<li>G1铁皮：同闹翻天的营销策略完全相同。648￥直接买-开精英要塞水晶-能量块礼包-专题竞技场开水晶，分阶段满足各类玩家的需求。</li>
+<li>滑流：精英恶毒嘲讽水晶，其他没变。从这里也能看出卡邦正在试点“五周专题人物+两周炒冷饭”的人物发布策略。</li>
 </ul>
+<!-- ```{r echo=FALSE, message=FALSE, warning=FALSE} -->
+<!-- library(magick) -->
+<!-- # Produce graphic -->
+<!-- fig <- image_graph(width = 800, height = 600, res = 96) -->
+<!-- ggplot2::qplot(factor(cyl), data = mtcars, fill = factor(gear)) -->
+<!-- invisible(dev.off()) -->
+<!-- frink <- image_read("https://jeroen.github.io/images/frink.png") -->
+<!-- fig %>% -->
+<!--   image_rotate(10) %>% -->
+<!--   image_implode(.6) %>% -->
+<!--   image_composite(frink, offset = "+140+70") %>% -->
+<!--   image_annotate("Very usefull stuff", size = 40, location = "+300+100", color = "navy", boxcolor = "pink") -->
+<!-- ``` -->
 </div>
     </section>
   </div>
